View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023186 | Community | OCCT:Visualization | public | 2012-06-01 13:05 | 2012-11-16 13:16 |
Reporter | ihaddadene | Assigned To | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Microsoft Windows | OS | Windows Seven | ||
Product Version | 6.5.3 | ||||
Target Version | 6.5.4 | Fixed in Version | 6.5.4 | ||
Summary | 0023186: Unable to display Graphic3d_ArrayOfPoints after migrating from OCCT 6.5.2 | ||||
Description | After migrating our project from OCCT 6.5.2 to 6.5.3, it was impossible to display a Graphic3d_ArrayOfPoints in an "AIS_InteractiveObject" derived class. I tried with Enabling/Disabling VBO. It seems that the MIN/MAX are evaluated since the view fit correctly but to an "invisible" object. | ||||
Steps To Reproduce | void AIS_MyIODerivedObject::Compute(const Handle(PrsMgr_PresentationManager3d)& aPresentationManager, const Handle(Prs3d_Presentation)& aPresentation, const Standard_Integer aMode) { // create an array Handle (Graphic3d_ArrayOfPoints) anArray = new Graphic3d_ArrayOfPoints (8); // add vertices to the array anArray->AddVertex (10.0, 10.0, 10.0); anArray->AddVertex (10.0, 10.0, 0.0); anArray->AddVertex (10.0, 0.0, 10.0); anArray->AddVertex (10.0, 0.0, 0.0); anArray->AddVertex ( 0.0, 10.0, 10.0); anArray->AddVertex ( 0.0, 10.0, 0.0); anArray->AddVertex ( 0.0, 0.0, 10.0); anArray->AddVertex ( 0.0, 0.0, 0.0); // add the array to the structure Handle (Graphic3d_Group) aGroup = Prs3d_Root::CurrentGroup (aPresentation); aGroup->BeginPrimitives (); aGroup->AddPrimitiveArray (anArray); aGroup->EndPrimitives (); } In DRAW: vdrawparray a points 0 v 0 0 0 v 0 0 10 v 0 10 10 v 0 10 0 | ||||
Additional information and documentation updates | Mistake in OpenGl_PrimitiveArray class resulted from equal values of GL_NONE and GL_POINTS constants corrected. | ||||
Tags | No tags attached. | ||||
Test case number | chl 934 C0 | ||||
|
Branch CR23186 ready for reviewing. |
|
Patch is OK, though I prefer declarations of constants related to class definition like this: class OpenGl_PrimitiveArray : public OpenGl_Element { public: static const GLint DRAW_MODE_UNDEFINED = -1; ... }; |
|
Note for testers: branch CR23186 has been updated once more to reflect the reviewer's remark. |
|
Dear BugMaster, The workbenches KAS:dev:aan-23186-occt (GIT branch CR23186) KAS:dev:aan-23186-products (GIT master) were compiled on Linux platform and tested. Regression: Not detected Improvements: Not detected Testing case: Test case for this bug is chl 934 C0. It is OK in this branch. It is FAILED in current master (KAS:dev:products-20120615-opt). See results in /QADisk/occttests/results/KAS/dev/aan-23186-products_20062012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120615-opt_15062012/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
2012-06-21 17:55 tester |
C0 (1,389 bytes) |
occt: master 1d03e66d 2012-06-22 07:33:53
|
0023186: Unable to display Graphic3d_ArrayOfPoints after migrating from OCCT 6.5.2 GL_NONE replaced with PARRAY_DRAW_MODE_NONE to disambiguate with GL_POINTS DRAW_MODE_NONE constant moved into OpenGl_PrimitiveArray class to avoid potential name collisions |
Affected Issues 0023186 |
|
mod - src/OpenGl/OpenGl_PrimitiveArray.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_PrimitiveArray.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-06-01 13:05 | ihaddadene | New Issue | |
2012-06-01 13:05 | ihaddadene | Assigned To | => san |
2012-06-19 21:38 |
|
Status | new => assigned |
2012-06-19 21:41 |
|
Target Version | => 6.5.4 |
2012-06-19 21:41 |
|
Steps to Reproduce Updated | |
2012-06-19 21:41 |
|
Additional Information Updated | |
2012-06-19 21:48 |
|
Note Added: 0020737 | |
2012-06-19 21:48 |
|
Assigned To | san => kgv |
2012-06-19 21:48 |
|
Status | assigned => resolved |
2012-06-19 21:49 |
|
Steps to Reproduce Updated | |
2012-06-19 22:00 | kgv | Note Added: 0020738 | |
2012-06-19 22:00 | kgv | Assigned To | kgv => bugmaster |
2012-06-19 22:00 | kgv | Status | resolved => reviewed |
2012-06-20 11:44 |
|
Note Added: 0020742 | |
2012-06-20 14:39 |
|
Assigned To | bugmaster => aan |
2012-06-20 17:40 |
|
Test case number | => chl 934 C0 |
2012-06-20 17:41 |
|
File Added: C0 | |
2012-06-20 20:11 |
|
File Deleted: C0 | |
2012-06-20 20:11 |
|
File Added: C0 | |
2012-06-21 16:44 |
|
Note Added: 0020748 | |
2012-06-21 16:46 |
|
Status | reviewed => tested |
2012-06-21 17:16 |
|
File Deleted: C0 | |
2012-06-21 17:16 |
|
File Added: C0 | |
2012-06-21 17:55 |
|
File Deleted: C0 | |
2012-06-21 17:55 |
|
File Added: C0 | |
2012-06-21 17:55 |
|
File Deleted: C0 | |
2012-06-21 17:55 |
|
File Added: C0 | |
2012-06-25 20:05 |
|
Changeset attached | => occt master 1d03e66d |
2012-06-25 20:05 |
|
Assigned To | aan => san |
2012-06-25 20:05 |
|
Status | tested => verified |
2012-06-25 20:05 |
|
Resolution | open => fixed |
2012-11-16 13:15 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:16 | bugmaster | Status | verified => closed |