0023186: Unable to display Graphic3d_ArrayOfPoints after migrating from OCCT 6.5.2

GL_NONE replaced with PARRAY_DRAW_MODE_NONE to disambiguate with GL_POINTS
DRAW_MODE_NONE constant moved into OpenGl_PrimitiveArray class to avoid potential name collisions